Merge branch 'apps-6979' into 'main'
APPS-6979 For the same prefix only suggest the localized operation name

See merge request ggb/geogebra!9791

GitOrigin-RevId: 16d1bc6ba93876424b3541ee347ea05f5f4404c0